--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="media/logo.png"/>
+    <link rel="icon" type="image/png" href="media/logo.png" />
     <link rel="stylesheet" href="styles.css">
     <title>Irene Rodríguez</title>
 </head>
@@ -25,7 +26,8 @@
         <section id="inicio" class="index">
             <div>
                 <h1>Irene Rodríguez. Desarrolladora web</h1>
-                <p>Bienvenido a mi portafolio, aquí encontrarás algunos de mis proyectos más recientes y en los que estoy trabajando. Además de un breve resumen sobre quién soy y a lo que me dedico actualmente.</p>
+                <p>Bienvenido a mi portafolio, aquí encontrarás algunos de mis proyectos más recientes y en los que
+                    estoy trabajando. Además de un breve resumen sobre quién soy y a lo que me dedico actualmente.</p>
             </div>
         </section>
 
@@ -34,15 +36,21 @@
                 <div class="profile-section">
                     <img src="media/profile.jpg" alt="Foto de Irene Rodríguez" class="profile-img">
                     <div class="social-links">
-                        <a href="https://github.com/irenerodrod" target="_blank"><img src="media/github.png" alt="GitHub"></a>
-                        <a href="https://www.linkedin.com/in/irene-rodriguezrodriguez/" target="_blank"><img src="media/linkedin.png" alt="LinkedIn"></a>
+                        <a href="https://github.com/irenerodrod" target="_blank"><img src="media/github.png"
+                                alt="GitHub"></a>
+                        <a href="https://www.linkedin.com/in/irene-rodriguezrodriguez/" target="_blank"><img
+                                src="media/linkedin.png" alt="LinkedIn"></a>
                     </div>
                 </div>
                 <div class="about-text">
+                    <h1>Sobre mí</h1>
                     <h2>Irene Rodríguez. Desarrolladora web autodidacta.</h2>
-                    <p>¡Hola! Soy Irene Rodríguez, una desarrolladora web autodidacta. Apasionada por el mundo de la tecnología y el diseño. </p>
-                    <p>Mi pasión siempre han sido el diseño y la tecnología, en ambos he sido autodidacta, pero lo que realmente me apasiona es poder juntar mis dos pasiones en una.</p>
-                    <p>Actualmente estoy estudiando un CFGS DAW (Ciclo Formativo de Grado Superior en Desarrollo de Aplicaciones Web). Tengo conocimientos en HTML5, CSS, JavaScript y Python.</p>
+                    <p>¡Hola! Soy Irene Rodríguez, una desarrolladora web autodidacta. Apasionada por el mundo de la
+                        tecnología y el diseño. </p>
+                    <p>Mi pasión siempre han sido el diseño y la tecnología, en ambos he sido autodidacta, pero lo que
+                        realmente me apasiona es poder juntar mis dos pasiones en una.</p>
+                    <p>Actualmente estoy estudiando un CFGS DAW (Ciclo Formativo de Grado Superior en Desarrollo de
+                        Aplicaciones Web). Tengo conocimientos en HTML5, CSS, JavaScript y Python.</p>
                 </div>
             </div>
         </section>
@@ -63,38 +71,46 @@
                 <button class="carousel-button prev" onclick="moveCarousel(-1)">&#10094;</button>
                 <div class="carousel-wrapper">
                     <div class="carousel-item">
-                        <img src="media/portfolio.jpg" alt="Portfolio personal">
-                        <div class="project-info">
-                            <h3><a href="https://github.com/irenerodrod/Portfolio" target="_blank">Portfolio</a></h3>
-                            <p>Un portfolio personal que muestra mis proyectos y habilidades.</p>
-                            <div class="tech-used">
-                                <img src="media/html5.png" alt="HTML5">
-                                <img src="media/css3.png" alt="CSS3">
-                                <img src="media/javascript.png" alt="JavaScript">
+                        <div class="project-container">
+                            <img src="media/portfolio.png" alt="Portfolio personal" class="project-image">
+                            <div class="project-info">
+                                <h3><a href="https://github.com/irenerodrod/Portfolio" target="_blank">Portfolio</a>
+                                </h3>
+                                <p>Un portfolio personal que muestra mis proyectos y habilidades.</p>
+                                <div class="tech-used">
+                                    <img src="media/html5.png" alt="HTML5">
+                                    <img src="media/css3.png" alt="CSS3">
+                                    <img src="media/javascript.png" alt="JavaScript">
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="media/passgen.jpg" alt="Generador de contraseñas">
-                        <div class="project-info">
-                            <h3><a href="https://github.com/irenerodrod/PassGen" target="_blank">PassGen</a></h3>
-                            <p>Una herramienta para generar contraseñas seguras.</p>
-                            <div class="tech-used">
-                                <img src="media/html5.png" alt="HTML5">
-                                <img src="media/css3.png" alt="CSS3">
-                                <img src="media/javascript.png" alt="JavaScript">
+                        <div class="project-container">
+                            <img src="media/passgen.png" alt="Generador de contraseñas" class="project-image">
+                            <div class="project-info">
+                                <h3><a href="https://github.com/irenerodrod/PassGen" target="_blank">PassGen</a></h3>
+                                <p>Una herramienta para generar contraseñas seguras.</p>
+                                <div class="tech-used">
+                                    <img src="media/html5.png" alt="HTML5">
+                                    <img src="media/css3.png" alt="CSS3">
+                                    <img src="media/javascript.png" alt="JavaScript">
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="media/bluevialdo.jpg" alt="Bluevialdo">
-                        <div class="project-info">
-                            <h3><a href="https://github.com/irenerodrod/bluevialdo" target="_blank">Bluevialdo</a></h3>
-                            <p>Web de un sello discográfico.</p>
-                            <div class="tech-used">
-                                <img src="media/html5.png" alt="HTML5">
-                                <img src="media/css3.png" alt="CSS3">
-                                <img src="media/javascript.png" alt="JavaScript">
+                        <div class="project-container">
+                            <img src="media/bluevialdo.png" alt="Bluevialdo" class="project-image">
+                            <div class="project-info">
+                                <h3><a href="https://github.com/irenerodrod/bluevialdo" target="_blank">Bluevialdo</a>
+                                </h3>
+                                <p>Web de un sello discográfico.</p>
+                                <div class="tech-used">
+                                    <img src="media/html5.png" alt="HTML5">
+                                    <img src="media/css3.png" alt="CSS3">
+                                    <img src="media/javascript.png" alt="JavaScript">
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -111,9 +127,10 @@
                 <li><a href="tel:+34609818876">Teléfono</a></li>
             </ul>
         </section>
-        
     </main>
 
     <script src="scripts.js"></script>
+
 </body>
+
 </html>
