--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
         <section id="inicio" class="index">
             <div>
                 <h1>Irene Rodríguez. Desarrolladora web</h1>
-                <p>Bienvenido a mi portafolio, aquí encontrarás algunos de mis proyectos más recientes y en los que
-                    estoy trabajando. Además de un breve resumen sobre quién soy y a lo que me dedico actualmente.</p>
+                <p>Te doy la bienvenida a mi portafolio, un espacio donde podrás explorar algunos de mis proyectos más recientes y los en los que me encuentro trabajando. También encontrarás un breve resumen sobre mí y mi actividad profesional actual.</p>
             </div>
         </section>
 
