agregado nuevo proyecto a la web

--- a/index.html
+++ b/index.html
@@ -113,6 +113,21 @@
                             </div>
                         </div>
                     </div>
+                    <div class="carousel-item">
+                        <div class="project-container">
+                            <img src="media/proximamente.png" alt="Proximamente" class="project-image">
+                            <div class="project-info">
+                                <h3><a href="https://github.com/irenerodrod/DescubreOrense" target="_blank">Descubre Orense</a>
+                                </h3>
+                                <p>Web de en la que se muestran las maravillas de la ciudad perteneciente a Galicia.</p>
+                                <div class="tech-used">
+                                    <img src="media/html5.png" alt="HTML5">
+                                    <img src="media/css3.png" alt="CSS3">
+                                    <img src="media/javascript.png" alt="JavaScript">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <button class="carousel-button next" onclick="moveCarousel(1)">&#10095;</button>
             </div>
