--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <ul>
                 <li><a href="#inicio">Inicio</a></li>
                 <li><a href="#sobre-mi">Sobre mí</a></li>
+                <li><a href="estudiosFormaciones">Estudios y formaciones</a></li>
                 <li><a href="#tecnologias">Tecnologías y lenguajes empleados</a></li>
                 <li><a href="#proyectos">Proyectos</a></li>
                 <li><a href="#contacto">Contacto</a></li>
@@ -52,6 +53,13 @@
                         Aplicaciones Web). Tengo conocimientos en HTML5, CSS, JavaScript y Python.</p>
                 </div>
             </div>
+        </section>
+
+        <section id="estudiosFormaciones" class="estudiosFormaciones">
+            <ul>
+                <li>CFGS en Desarrollo de Aplicaciones Web - Actualmente en curso</li>
+                <li>Autodidacta en tecnologías web, diseño UI/UX y desarrollo frontend</li>
+            </ul>
         </section>
 
         <section id="tecnologias" class="technologies">
@@ -119,11 +127,25 @@
                             <div class="project-info">
                                 <h3><a href="https://github.com/irenerodrod/DescubreOrense" target="_blank">Descubre Orense</a>
                                 </h3>
-                                <p>Web de en la que se muestran las maravillas de la ciudad perteneciente a Galicia.</p>
+                                <p>Web de en la que se muestran las maravillas de la ciudad perteneciente a Galicia.(No es oficial, ha sido creada con motivos educativos)</p>
                                 <div class="tech-used">
                                     <img src="media/html5.png" alt="HTML5">
                                     <img src="media/css3.png" alt="CSS3">
                                     <img src="media/javascript.png" alt="JavaScript">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="project-container">
+                            <img src="media/proximamente.png" alt="Proximamente" class="project-image">
+                            <div class="project-info">
+                                <h3><a href="https://github.com/irenerodrod/" target="_blank">Ayuntamiento en la provincia de León</a>
+                                </h3>
+                                <p>Web del ayuntamiento de la localidad.(No es oficial, ha sido creada con motivos educativos)</p>
+                                <div class="tech-used">
+                                    <img src="media/html5.png" alt="HTML5">
+                                    <img src="media/css3.png" alt="CSS3">
                                 </div>
                             </div>
                         </div>
