agregado titulo sección y añadidos los estilos

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         </section>
 
         <section id="estudiosFormaciones" class="estudiosFormaciones">
+            <h1>Estudios y formaciones</h1>
             <ul>
                 <li>CFGS en Desarrollo de Aplicaciones Web - Actualmente en curso</li>
                 <li>Autodidacta en tecnologías web, diseño UI/UX y desarrollo frontend</li>
