agregado nuevo proyecto (Sweet House) y formaciones

--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
             <h1>Estudios y formaciones</h1>
             <ul>
                 <li>CFGS en Desarrollo de Aplicaciones Web - Actualmente en curso</li>
-                <li>Autodidacta en tecnologías web, diseño UI/UX y desarrollo frontend</li>
+                <li>Google: Inteligencia artificial y productividad(Santander Open Academy - ago. 2024)</li>
+                <li>Fundamentos de la Inteligencia Artificial (IBM - jul. 2024)</li>
+                <li>ChatGPT para la mejora en el trabajo (Udemy - jul. 2024)</li>
+                <li>Fundamentos de la ciberseguridad (LinkedIn - jul. 2024)</li>
+                <li>B1 Inglés (EOI - jun. 2023)</li>
             </ul>
         </section>
 
@@ -114,6 +118,21 @@
                                 <h3><a href="https://github.com/irenerodrod/bluevialdo" target="_blank">Bluevialdo</a>
                                 </h3>
                                 <p>Web de un sello discográfico.</p>
+                                <div class="tech-used">
+                                    <img src="media/html5.png" alt="HTML5">
+                                    <img src="media/css3.png" alt="CSS3">
+                                    <img src="media/javascript.png" alt="JavaScript">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="project-container">
+                            <img src="media/sweethouse.png" alt="Sweet House Leon" class="project-image">
+                            <div class="project-info">
+                                <h3><a href="https://github.com/irenerodrod/sweethouse" target="_blank">Sweet House</a>
+                                </h3>
+                                <p>Web de una cafetería-pastelería de León (España).</p>
                                 <div class="tech-used">
                                     <img src="media/html5.png" alt="HTML5">
                                     <img src="media/css3.png" alt="CSS3">
