--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="#inicio">Inicio</a></li>
                 <li><a href="#sobre-mi">Sobre mí</a></li>
-                <li><a href="estudiosFormaciones">Estudios y formaciones</a></li>
+                <li><a href="#estudiosFormaciones">Estudios y formaciones</a></li>
                 <li><a href="#tecnologias">Tecnologías y lenguajes empleados</a></li>
                 <li><a href="#proyectos">Proyectos</a></li>
                 <li><a href="#contacto">Contacto</a></li>
