--- a/index.html
+++ b/index.html
@@ -26,40 +26,27 @@
     </header>
 
     <main>
-        <section id="inicio" class="index" tabindex="-1">
-            <h1>Irene Rodríguez - Desarrolladora web</h1>
-            <p>
-                Bienvenido a mi portafolio, un espacio donde podrás explorar algunos de mis proyectos más recientes y
-                los que estoy desarrollando actualmente. También encontrarás un resumen sobre mí y mi actividad
-                profesional.
-            </p>
-        </section>
-
-        <section id="sobre-mi" class="about" tabindex="-1">
-            <h2>Sobre mí</h2>
+        <section id="sobre-mi" class="about">
             <div class="about-content">
-                <figure class="profile-section">
-                    <img src="/webroot/media/newLogo.png" alt="Foto de Irene Rodríguez" class="profile-img" />
-                    <figcaption>
-                        <div class="social-links" aria-label="Redes sociales de Irene Rodríguez">
-                            <a href="https://github.com/irenerodrod" target="_blank" rel="noopener noreferrer"
-                                aria-label="GitHub de Irene Rodríguez">
-                                <img src="webroot/media/social/github.png" alt="Icono de GitHub" />
-                            </a>
-                            <a href="https://www.linkedin.com/in/irene-rodriguezrodriguez/" target="_blank"
-                                rel="noopener noreferrer" aria-label="LinkedIn de Irene Rodríguez">
-                                <img src="webroot/media/social/linkedin.png" alt="Icono de LinkedIn" />
-                            </a>
-                        </div>
-                    </figcaption>
-                </figure>
-                <article class="about-text">
-                    <h3>Irene Rodríguez. Desarrolladora web autodidacta.</h3>
-                    <p>¡Hola! Soy Irene, apasionada por la tecnología y el diseño, y me encanta combinar ambas para
-                        crear experiencias web atractivas y funcionales.</p>
-                    <p>Actualmente curso el CFGS en Desarrollo de Aplicaciones Web. Manejo HTML5, CSS3, JavaScript y
-                        Python, y siempre estoy aprendiendo nuevas tecnologías.</p>
-                </article>
+                <div class="profile-section">
+                    <img src="/webroot/media/newlogo.png" alt="Logo de Irene Rodríguez" class="profile-img">
+                    <div class="social-links">
+                        <a href="https://github.com/irenerodrod" target="_blank"><img
+                                src="/webroot/media/social/github.png" alt="GitHub"></a>
+                        <a href="https://www.linkedin.com/in/irene-rodriguezrodriguez/" target="_blank"><img
+                                src="/webroot/media/social/linkedin.png" alt="LinkedIn"></a>
+                    </div>
+                </div>
+                <div class="about-text">
+                    <h1>Sobre mí</h1>
+                    <h2>Irene Rodríguez. Desarrolladora web autodidacta.</h2>
+                    <p>¡Hola! Soy Irene Rodríguez, una desarrolladora web autodidacta. Apasionada por el mundo de la
+                        tecnología y el diseño. </p>
+                    <p>Mi pasión siempre han sido el diseño y la tecnología, en ambos he sido autodidacta, pero lo que
+                        realmente me apasiona es poder juntar mis dos pasiones en una.</p>
+                    <p>Actualmente estoy estudiando un CFGS DAW (Ciclo Formativo de Grado Superior en Desarrollo de
+                        Aplicaciones Web). Tengo conocimientos en HTML5, CSS, JavaScript y Python.</p>
+                </div>
             </div>
         </section>
 
@@ -87,42 +74,32 @@
             </div>
         </section>
 
-<section id="proyectos" class="projects" tabindex="-1">
-    <h2>Proyectos recientes</h2>
-    <div class="carousel" aria-roledescription="carousel" aria-label="Proyectos recientes">
-        <button class="carousel-button prev" aria-controls="carousel-wrapper" aria-label="Proyecto anterior"
-            onclick="moveCarousel(-1)">&#10094;</button>
-        <div id="carousel-wrapper" class="carousel-wrapper" role="list">
-            <!-- Proyecto 1 -->
-            <div class="project-container">
-                <img src="webroot/media/proyectos/portfolio.png" alt="Captura del portfolio personal" class="project-image" />
-                <div class="project-info">
-                    <h3>
-                        <a href="https://github.com/irenerodrod/Portfolio" target="_blank"
-                            rel="noopener noreferrer">Portfolio</a>
-                    </h3>
-                    <p>Un portfolio personal que muestra mis proyectos y habilidades.</p>
+        <section id="proyectos" class="projects" tabindex="-1">
+            <h2>Proyectos recientes</h2>
+            <div class="project-grid">
+                <!-- Proyecto 1 -->
+                <div class="project-container">
+                    <img src="webroot/media/proyectos/portfolio.png" alt="Captura del portfolio personal"
+                        class="project-image">
+                    <div class="project-info">
+                        <h3><a href="https://github.com/irenerodrod/Portfolio" target="_blank"
+                                rel="noopener noreferrer">Portfolio</a></h3>
+                        <p>Un portfolio personal que muestra mis proyectos y habilidades.</p>
+                    </div>
                 </div>
-            </div>
-            <!-- Proyecto 2 -->
-            <div class="project-container">
-                <img src="webroot/media/proyectos/passgen.png" alt="Captura del generador de contraseñas"
-                    class="project-image" />
-                <div class="project-info">
-                    <h3>
-                        <a href="https://github.com/irenerodrod/PassGen" target="_blank"
-                            rel="noopener noreferrer">PassGen</a>
-                    </h3>
-                    <p>Una herramienta para generar contraseñas seguras.</p>
+                <!-- Proyecto 2 -->
+                <div class="project-container">
+                    <img src="webroot/media/proyectos/passgen.png" alt="Captura del generador de contraseñas"
+                        class="project-image">
+                    <div class="project-info">
+                        <h3><a href="https://github.com/irenerodrod/PassGen" target="_blank"
+                                rel="noopener noreferrer">PassGen</a></h3>
+                        <p>Una herramienta para generar contraseñas seguras.</p>
+                    </div>
                 </div>
+                <!-- Más proyectos similares omitidos por brevedad... -->
             </div>
-            <!-- Más proyectos similares omitidos por brevedad... -->
-        </div>
-        <button class="carousel-button next" aria-controls="carousel-wrapper" aria-label="Proyecto siguiente"
-            onclick="moveCarousel(1)">&#10095;</button>
-    </div>
-</section>
-
+        </section>
 
         <section id="contacto" class="contact" tabindex="-1">
             <h2>Contacto</h2>
