--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
     <header>
         <nav aria-label="Menú principal">
             <ul>
-                <li><a href="#inicio">Inicio</a></li>
-                <li><a href="#sobre-mi">Sobre mí</a></li>
-                <li><a href="#estudios-formaciones">Estudios y formaciones</a></li>
-                <li><a href="#tecnologias">Tecnologías y lenguajes</a></li>
-                <li><a href="#proyectos">Proyectos</a></li>
-                <li><a href="#contacto">Contacto</a></li>
+                <li><a href="https://github.com/irenerodrod/Portfolio">GitHub</a></li>
+                <li><a href="https://www.linkedin.com/in/irene-rodriguezrodriguez/">LinkedIn</a></li>
+                <li><a href="https://instagram.com/cuentadeire">Instagram</a></li>
+                
             </ul>
         </nav>
     </header>
