--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="https://github.com/irenerodrod/Portfolio">GitHub</a></li>
                 <li><a href="https://www.linkedin.com/in/irene-rodriguezrodriguez/">LinkedIn</a></li>
                 <li><a href="https://instagram.com/cuentadeire">Instagram</a></li>
-                
+
             </ul>
         </nav>
     </header>
@@ -27,7 +27,7 @@
         <section id="sobre-mi" class="about">
             <div class="about-content">
                 <div class="profile-section">
-                    <img src="/webroot/media/newlogo.png" alt="Logo de Irene Rodríguez" class="profile-img">
+                    <img src="/webroot/media/newLogo.png" alt="Logo de Irene Rodríguez" class="profile-img">
                     <div class="social-links">
                         <a href="https://github.com/irenerodrod" target="_blank"><img
                                 src="/webroot/media/social/github.png" alt="GitHub"></a>
