agregado script para las estadisticas de vercel

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <title>Irene Rodríguez - Desarrolladora Web</title>
     <meta name="description"
         content="Portafolio de Irene Rodríguez, desarrolladora web autodidacta con proyectos en HTML5, CSS3, JavaScript y Python." />
+        <!-- estadísticas para vercel (analytics)-->
+    <script>
+        window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
 </head>
 
 <body>
