agregado script para las speed insights

--- a/index.html
+++ b/index.html
@@ -9,11 +9,20 @@
     <title>Irene Rodríguez - Desarrolladora Web</title>
     <meta name="description"
         content="Portafolio de Irene Rodríguez, desarrolladora web autodidacta con proyectos en HTML5, CSS3, JavaScript y Python." />
-        <!-- estadísticas para vercel (analytics)-->
+    <!-- estadísticas para vercel (analytics)-->
     <script>
         window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
     </script>
     <script defer src="/_vercel/insights/script.js"></script>
+
+    <!-- Vercel Speed Insights -->
+    <script>
+        window.si = window.si || function () {
+            (window.siq = window.siq || []).push(arguments);
+        };
+    </script>
+    <script defer src="/_vercel/speed-insights/script.js"></script>
+
 </head>
 
 <body>
