--- a/index.html
+++ b/index.html
@@ -57,13 +57,14 @@
                     <div class="profile-section">
                         <img src="/webroot/media/newLogo.png" alt="Logo de Irene Rodríguez" class="profile-img">
                         <div class="social-links">
-                            <a href="tel:+34609818876" target="_blank"><img
-                                    src="/webroot/media/contacto/llamar.png" alt="Teléfono"></a>
+                            <a href="tel:+34609818876" target="_blank"><img src="/webroot/media/contacto/llamar.png"
+                                    alt="Teléfono"></a>
                             <a href="mailto:cuentadeire@gmail.com" target="_blank"><img
                                     src="/webroot/media/contacto/correo-electronico.png" alt="Correo"></a>
                             <a href="/webroot/doc/IreneRodriguezR_CurriculumVitae.pdf" target="_blank"><img
                                     src="/webroot/media/contacto/curriculum-vitae.png" alt="CV"></a>
-                            <a href="/webroot/feed/rss.xml" target="_blank"><img src="/webroot/media/social/rss.png" alt="RSS"></a>
+                            <a href="/webroot/feed/rss.xml" target="_blank"><img src="/webroot/media/social/rss.png"
+                                    alt="RSS"></a>
                         </div>
                     </div>
                     <div class="about-text">
@@ -187,12 +188,12 @@
                         <img src="webroot/media/proyectos/portfolio.png" alt="Captura del portfolio personal"
                             class="project-image">
                         <div class="project-info">
-                            <h3><a href="https://github.com/irenerodrod/Portfolio" target="_blank"
+                            <h3><a href="https://portfolioirene.vercel.app" target="_blank"
                                     rel="noopener noreferrer">Portfolio</a></h3>
                             <p>Un portfolio personal que muestra mis proyectos y habilidades.</p>
                         </div>
                     </div>
-                    <!-- Proyecto 2 -->
+                    <!-- Proyecto 2 
                     <div class="project-container">
                         <img src="webroot/media/proyectos/passgen.png" alt="Captura del generador de contraseñas"
                             class="project-image">
@@ -202,27 +203,37 @@
                             <p>Una herramienta para generar contraseñas seguras.</p>
                         </div>
                     </div>
-                    <!-- Proyecto 3 -->
+                    -->
+                    <!-- Proyecto 2 -->
                     <div class="project-container">
-                        <img src="webroot/media/proyectos/proximamente.png" alt="Próximamente" class="project-image">
+                        <img src="webroot/media/proyectos/DAW16.png" alt="Próximamente" class="project-image">
                         <div class="project-info">
-                            <h3><a href="https://github.com/irenerodriguezrod/116LMSGIProyectoDAW" target="_blank"
-                                    rel="noopener noreferrer"> CFGS DAW - 116LMSGIProyectoDAW</a></h3>
+                            <h3><a href="https://16DAW.vercel.app" target="_blank"
+                                    rel="noopener noreferrer"> CFGS DAW - 16DAW</a></h3>
                             <p>Proyecto de la web del Ciclo Formativo de Grado Superior en Desarrollo de Aplicaciones
                                 Web.
                             </p>
                         </div>
                     </div>
-                    <!-- Proyecto 4 -->
+
+                    <!-- Proyecto 3 -->
                     <div class="project-container">
-                        <img src="webroot/media/proyectos/proximamente.png" alt="Próximamente" class="project-image">
+                        <img src="webroot/media/proyectos/proximamente.png" alt="PROXIMAMENTE" class="project-image">
                         <div class="project-info">
-                            <h3><a href="https://github.com/irenerodriguezrod/116LMSGIProyectoLMSGI" target="_blank"
-                                    rel="noopener noreferrer"> CFGS DAW - 116LMSGIProyectoLMSGI</a></h3>
-                            <p>Proyecto de la web de la asignatura de Lenguajes de Marcas y Sistemas de Gestion de
-                                Información.</p>
+                            <h3><a href="#" target="_blank" rel="noopener noreferrer">Próximamente</a></h3>
+                            <p>Proximamente...</p>
                         </div>
                     </div>
+
+                    <!-- Proyecto 4 -->
+                    <div class="project-container">
+                        <img src="webroot/media/proyectos/proximamente.png" alt="PROXIMAMENTE" class="project-image">
+                        <div class="project-info">
+                            <h3><a href="#" target="_blank" rel="noopener noreferrer">Próximamente</a></h3>
+                            <p>Proximamente...</p>
+                        </div>
+                    </div>
+
                     <!-- Proyecto 5 -->
                     <div class="project-container">
                         <img src="webroot/media/proyectos/proximamente.png" alt="PROXIMAMENTE" class="project-image">
