--- a/index.html
+++ b/index.html
@@ -57,12 +57,15 @@
                     <div class="profile-section">
                         <img src="/webroot/media/newLogo.png" alt="Logo de Irene Rodríguez" class="profile-img">
                         <div class="social-links">
-                            <a href="tel:+34609818876" target="_blank"><img src="/webroot/media/contacto/llamar.png"
-                                    alt="Teléfono"></a>
-                            <a href="mailto:cuentadeire@gmail.com" target="_blank"><img
-                                    src="/webroot/media/contacto/correo-electronico.png" alt="Correo"></a>
-                            <a href="/webroot/doc/IreneRodriguezR_CurriculumVitae.pdf" target="_blank"><img
-                                    src="/webroot/media/contacto/curriculum-vitae.png" alt="CV"></a>
+                            <a href="tel:+34609818876" title="Llamar a Irene">
+                                <img src="/webroot/media/contacto/llamar.png" alt="Teléfono">
+                            </a>
+                            <a href="mailto:cuentadeire@gmail.com" title="Enviar un correo a Irene">
+                                <img src="/webroot/media/contacto/correo-electronico.png" alt="Correo">
+                            </a>
+                            <a href="/webroot/doc/IreneRodriguezR_CurriculumVitae.pdf" target="_blank" title="Ver CV">
+                                <img src="/webroot/media/contacto/curriculum-vitae.png" alt="Currículum de Irene Rodríguez">
+                            </a>
                             <a href="/webroot/feed/rss.xml" target="_blank"><img src="/webroot/media/social/rss.png"
                                     alt="RSS"></a>
                         </div>
@@ -208,8 +211,8 @@
                     <div class="project-container">
                         <img src="webroot/media/proyectos/DAW16.png" alt="Próximamente" class="project-image">
                         <div class="project-info">
-                            <h3><a href="https://16DAW.vercel.app" target="_blank"
-                                    rel="noopener noreferrer"> CFGS DAW - 16DAW</a></h3>
+                            <h3><a href="https://16DAW.vercel.app" target="_blank" rel="noopener noreferrer"> CFGS DAW -
+                                    16DAW</a></h3>
                             <p>Proyecto de la web del Ciclo Formativo de Grado Superior en Desarrollo de Aplicaciones
                                 Web.
                             </p>
