🎨 Corrección diseño responsive

--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
                                 <img src="/webroot/media/contacto/correo-electronico.png" alt="Correo">
                             </a>
                             <a href="/webroot/doc/IreneRodriguezR_CurriculumVitae.pdf" target="_blank" title="Ver CV">
-                                <img src="/webroot/media/contacto/curriculum-vitae.png" alt="Currículum de Irene Rodríguez">
+                                <img src="/webroot/media/contacto/curriculum-vitae.png"
+                                    alt="Currículum de Irene Rodríguez">
                             </a>
                             <a href="/webroot/feed/rss.xml" target="_blank"><img src="/webroot/media/social/rss.png"
                                     alt="RSS"></a>
@@ -122,7 +123,7 @@
                 </table>
             </section>
 
-            <section id="tecnologiaHerramientas">
+            <section id="tecnologiaHerramientas" class="tecnologiaHerramientas">
                 <h2>Tecnologías y herramientas utilizadas</h2>
                 <div class="slider">
                     <div class="slide-track">
@@ -187,15 +188,16 @@
                 <h2>Proyectos recientes</h2>
                 <div class="project-grid">
                     <!-- Proyecto 1 -->
-                    <div class="project-container">
-                        <img src="webroot/media/proyectos/portfolio.png" alt="Captura del portfolio personal"
-                            class="project-image">
-                        <div class="project-info">
-                            <h3><a href="https://portfolioirene.vercel.app" target="_blank"
-                                    rel="noopener noreferrer">Portfolio</a></h3>
-                            <p>Un portfolio personal que muestra mis proyectos y habilidades.</p>
+                    <a href="https://portfolioirene.vercel.app" target="_blank" rel="noopener noreferrer">
+                        <div class="project-container">
+                            <img src="webroot/media/proyectos/portfolio.png" alt="Captura del portfolio personal"
+                                class="project-image">
+                            <div class="project-info">
+                                <h3>Portfolio</h3>
+                                <p>Un portfolio personal que muestra mis proyectos y habilidades.</p>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                     <!-- Proyecto 2 
                     <div class="project-container">
                         <img src="webroot/media/proyectos/passgen.png" alt="Captura del generador de contraseñas"
@@ -208,16 +210,19 @@
                     </div>
                     -->
                     <!-- Proyecto 2 -->
-                    <div class="project-container">
-                        <img src="webroot/media/proyectos/DAW16.png" alt="Próximamente" class="project-image">
-                        <div class="project-info">
-                            <h3><a href="https://16DAW.vercel.app" target="_blank" rel="noopener noreferrer"> CFGS DAW -
-                                    16DAW</a></h3>
-                            <p>Proyecto de la web del Ciclo Formativo de Grado Superior en Desarrollo de Aplicaciones
-                                Web.
-                            </p>
+                    <a href="https://16DAW.vercel.app" target="_blank" rel="noopener noreferrer">
+                        <div class="project-container">
+                            <img src="webroot/media/proyectos/DAW16.png" alt="Próximamente" class="project-image">
+                            <div class="project-info">
+                                <h3>CFGS DAW -
+                                    16DAW</h3>
+                                <p>Proyecto de la web del Ciclo Formativo de Grado Superior en Desarrollo de
+                                    Aplicaciones
+                                    Web.
+                                </p>
+                            </div>
                         </div>
-                    </div>
+                    </a>
 
                     <!-- Proyecto 3 -->
                     <div class="project-container">
@@ -271,6 +276,7 @@
                     </div>
                 </div>
             </section>
+        </div>
     </main>
 
     <footer>
