--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                     </div>
                     -->
                     <!-- Proyecto 2 -->
-                    <a href="https://16DAW.vercel.app" target="_blank" rel="noopener noreferrer">
+                    <a href="https://daw16.vercel.app/" target="_blank" rel="noopener noreferrer">
                         <div class="project-container">
                             <img src="webroot/media/proyectos/DAW16.png" alt="Próximamente" class="project-image">
                             <div class="project-info">
