✨ Agregado nuevo proyecto y contacto a través de Telegram

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/png" href="media/logo.png" />
+    <link rel="icon" type="image/png" href="media/newLogo.png" />
     <link rel="stylesheet" href="styles.css" />
     <title>Irene Rodríguez - Desarrolladora Web</title>
     <meta name="description"
@@ -46,6 +46,8 @@
                             alt="Whatsapp"></a></li>
                 <li><a href="https://x.com/cuentadeire" target="_blank"><img src="/webroot/media/social/x.png"
                             alt="X"></a></li>
+                <li><a href="https://t.me/cuentadeire" target="_blank"><img src="/webroot/media/social/telegram.png"
+                            alt="Telegram"></a></li>
             </ul>
         </nav>
     </header>
@@ -224,14 +226,18 @@
                         </div>
                     </a>
 
-                    <!-- Proyecto 3 -->
-                    <div class="project-container">
-                        <img src="webroot/media/proyectos/proximamente.png" alt="PROXIMAMENTE" class="project-image">
-                        <div class="project-info">
-                            <h3><a href="#" target="_blank" rel="noopener noreferrer">Próximamente</a></h3>
-                            <p>Proximamente...</p>
+                    <!-- Proyecto 3 - Fundación A Medorra -->
+                    <a href="https://fundacionamedorra.vercel.app/" target="_blank" rel="noopener noreferrer">
+                        <div class="project-container">
+                            <img src="webroot/media/proyectos/fam.png" alt="Fundación A Medorra" class="project-image">
+                            <div class="project-info">
+                                <h3>Fundación A Medorra</h3>
+                                <p>Proyecto realizado para la Fundación A Medorra, ubicada en Pereiro de Aguiar
+                                    (Ourense).</p>
+                            </div>
                         </div>
-                    </div>
+                    </a>
+
 
                     <!-- Proyecto 4 -->
                     <div class="project-container">
